--- a/trunk/gtk.mod/IDE/Makefile
+++ b/trunk/gtk.mod/IDE/Makefile
@@ -4,6 +4,7 @@ all:
 all-recursive:
 	make -Cpo all
 	make -Cdoc all
+	make -Cdata all
 
 clean:
 	make clean-recursive
@@ -11,6 +12,7 @@ clean:
 clean-recursive:
 	make -Cpo clean
 	make -Cdoc clean
+	make -Cdata clean
 
 uninstall:
 	make uninstall-recursive
@@ -18,6 +20,7 @@ uninstall:
 uninstall-recursive:
 	make -Cpo uninstall
 	make -Cdoc uninstall
+	make -Cdata uninstall
 
 install:
 	make install-recursive
@@ -25,3 +28,4 @@ install:
 install-recursive:
 	make -Cpo install
 	make -Cdoc install
+	make -Cdata install
