--- a/trunk/gtk.mod/IDE/po/Makefile
+++ b/trunk/gtk.mod/IDE/po/Makefile
@@ -1,21 +1,21 @@
 # Things for intltool
 top_srcdir=..
 
+pkgname=gtkmaxide
+
 all: update mo
 
 update:	../IDE.bmx ../ide.glade
 	EXTRACT=. ./intltool-update de
 
 mo:	de.po
-	msgfmt -c -v -o de.mo de.po
+	msgfmt -c -v -o de.gmo de.po
 
 install:
-	mkdir -p ../lang/de/LC_MESSAGES
-	cp /usr/share/locale/locale.alias /usr/share/locale/all_languages ../lang
-	cp de.mo ../lang/de/LC_MESSAGES/gtkbmxide.mo
+	cp de.gmo /usr/share/locale/de/LC_MESSAGES/$(pkgname).mo
 
 clean:
-	rm -f *.mo
+	rm -f de.gmo
 
 uninstall:
-	rm -rf ../lang
+	rm -f /usr/share/locale/de/LC_MESSAGES/$(pkgname).mo
